[package]
name = "molrs"
version = "0.1.0"
edition = "2021"
authors = ["Sam Mun"]
description = "A cheminformatics toolkit written in Rust."
readme = "README.md"
homepage = "https://github.com/TheRealSalmon/molrs"
license = "MIT"
keywords = ["chem", "chemistry", "cheminformatics", "RDKit"]

[dependencies]
petgraph = "0.6.3"

[dev-dependencies]
tester = "0.9.0"
