[package]
name = "molrs"
version = "0.1.0"
edition = "2021"
authors = ["Sam Mun"]
description = "A cheminformatics toolkit written in Rust."
readme = "README.md"
homepage = "https://github.com/TheRealSalmon/molrs"
license = "MIT"
keywords = ["chem", "chemistry", "cheminformatics", "rdkit"]

[dependencies]
pertable = "0.1.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
